# django-rearrange-widget

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
example/: manage.py
example/example/: admin.py  forms.py  models.py  settings.py
example/example/migrations/: 0001_initial.py  0002_alter_item_options.py  0003_alter_item_container_anotheritem.py
example/fixtures/: testdata.json
rearrange_widget/: apps.py  widgets.py
rearrange_widget/static/css/: rearrange-widget.css
rearrange_widget/static/js/: rearrange-widget.js
rearrange_widget/templates/forms/widgets/: rearrange-widget.html
reorder_items_widget/: __init__.py  __version__.py  apps.py  tests.py  widgets.py
reorder_items_widget/static/js/: reorder-items-widget.js
reorder_items_widget/templates/forms/widgets/: reorder-items-widget.html
reorder_items_widget/templatetags/: reorder_items_widget.py
