[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-reorder-items-widget"
authors = [{name = "Thomas Leichtfuß", email = "thomas.leichtfuss@posteo.de"}]
description = "Easily reorder the order of items within the django admin backend."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["django", "django-admin", "widgets"]
license = { text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "Django>=3.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/thomst/django-reorder-items-widget"
Repository = "https://github.com/thomst/django-reorder-items-widget"
Documentation = "https://github.com/thomst/django-reorder-items-widget#readme"

[tool.setuptools]
packages = ["reorder_items_widget", "reorder_items_widget.templatetags"]
include-package-data = false

[tool.setuptools.package-data]
reorder_items_widget = ["templates/**", "static/**"]

[tool.setuptools.dynamic]
version = {attr = "reorder_items_widget.__version__.__version__"}
